Add Gradle tasks to run tests on Solo or Turtle plus some minor improvements
Signed-off-by: Michael Heinrichs <netopyr@users.noreply.github.com>